--- a/berita1.html
+++ b/berita1.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-content">
             <img src="logo.png" alt="Logo" class="logo">
-            <h1>Informasi Gempa Bumi dan Tsunami Di Lampung</h1>
+            <h1>Informasi Gempa Bumi dan Tsunami Di Lampung dan Sekitarnya</h1>
         </div>
     </header>
     <nav>
