--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="status-container">
                     <span class="status-item status-aman">
                         <span class="status-bullet"></span> Aman (magnitudo 2,5 - 4,5)  
-                    </span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    </span>&nbsp; &nbsp; &nbsp; &nbsp;
                     <span class="status-item status-waspada">
                         <span class="status-bullet"></span> Waspada (magnitudo 4,5 - 6,9)
                     </span>
